# RESOLUTE_AC

./: README.md
centos/: CMakeLists.txt  configure
linux/: CMakeLists.txt  main.cpp
